--- a/act1-chinook-data-modeling/dbt/transforms/01_mpg/models/sources.yml
+++ b/act1-chinook-data-modeling/dbt/transforms/01_mpg/models/sources.yml
@@ -2,6 +2,6 @@ version: 2
 
 sources:
   - name: raw
-    schema: raw  # Explicitly specify ClickHouse database
+    database: raw  # Explicitly specify ClickHouse database
     tables:
-      - name: autompg___cars     # Must match EXACTLY (3 underscores)
+      - name: autompg___cars_cj     # Must match EXACTLY (3 underscores)
