--- a/act1-chinook-data-modeling/dbt/transforms/02_chinook/models/sources.yml
+++ b/act1-chinook-data-modeling/dbt/transforms/02_chinook/models/sources.yml
@@ -4,11 +4,11 @@ sources:
   - name: raw
     database: raw  # Explicitly specify ClickHouse database
     tables:
-      - name: chinook_cj___albums
-      - name: chinook_cj___artists
-      - name: chinook_cj___customers
-      - name: chinook_cj___employees
-      - name: chinook_cj___genres
-      - name: chinook_cj___invoice_lines
-      - name: chinook_cj___invoices
-      - name: chinook_cj___tracks
+      - name: chinook_grp3___albums
+      - name: chinook_grp3___artists
+      - name: chinook_grp3___customers
+      - name: chinook_grp3___employees
+      - name: chinook_grp3___genres
+      - name: chinook_grp3___invoice_lines
+      - name: chinook_grp3___invoices
+      - name: chinook_grp3___tracks
