change data type of date

--- a/act.2-OULAD-data-modeling/dbt/transforms/grp3_oulad/models/sources.yml
+++ b/act.2-OULAD-data-modeling/dbt/transforms/grp3_oulad/models/sources.yml
@@ -5,3 +5,9 @@ sources:
     schema: raw  # Explicitly specify ClickHouse database
     tables:
       - name: oulad_grp3___vle     # Must match EXACTLY (3 underscores)
+      - name: oulad_grp3___student_registration
+      - name: oulad_grp3___student_info
+      - name: oulad_grp3___student_assessment
+      - name: oulad_grp3___courses
+      - name: oulad_grp3___assessments
+      - name: studentVle
