Added .dlt and updated .gitignore
Signed-off-by: cj-a-murillo <christinemurillo24@gmail.com>

--- a/act.2-OULAD-data-modeling/.gitignore
+++ b/act.2-OULAD-data-modeling/.gitignore
@@ -10,7 +10,7 @@ dlt/**/trace.pickle
 dlt/**/state.json
 dlt/**/.version
 dlt/pipelines/
-dlt/.dlt/secrets.toml
+#dlt/.dlt/secrets.toml
 
 
 # Editor files
