--- a/act.2-OULAD-data-modeling/dbt/transforms/grp3_oulad/models/sources.yml
+++ b/act.2-OULAD-data-modeling/dbt/transforms/grp3_oulad/models/sources.yml
@@ -26,3 +26,17 @@ sources:
       - name: stg_oulad_student_info_grp3
       - name: stg_oulad_student_registration_grp3
       - name: stg_oulad_vle_grp3
+
+  - name: mart
+    database: mart  
+    tables:
+      - name: dim_oulad_age_band_grp3
+      - name: dim_oulad_assessment_type_grp3
+      - name: dim_oulad_courses_grp3
+      - name: dim_oulad_final_result_grp3
+      - name: dim_oulad_highest_education_grp3
+      - name: dim_oulad_imd_band_grp3
+      - name: dim_oulad_region_grp3
+      - name: dim_oulad_student_grp3
+      - name: fact_oulad_student_assessment_grp3
+      - name: fact_oulad_student_course_result_grp3
